--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   flutter_svg: ^2.0.7
   percent_indicator: ^4.2.3
   calendar_timeline: ^1.1.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 
 
 
@@ -21,6 +24,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
@@ -30,3 +35,4 @@ flutter:
     - assets/activity_icons/w.svg
     - assets/activity_icons/run.svg
     - assets/activity_icons/walk.svg
+    - assets/activity_icons/cycle.svg
